--- a/app/src/main/res/drawable/location_arrow.xml
+++ b/app/src/main/res/drawable/location_arrow.xml
@@ -1,9 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="800dp"
-    android:height="800dp"
+    android:width="24dp"
+    android:height="30dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportHeight="30">
   <path
-      android:pathData="M21.15,2.86a2.89,2.89 0,0 0,-3 -0.71L4,6.88a2.9,2.9 0,0 0,-0.12 5.47l5.24,2h0a0.93,0.93 0,0 1,0.53 0.52l2,5.25A2.87,2.87 0,0 0,14.36 22h0.07a2.88,2.88 0,0 0,2.69 -2L21.85,5.83A2.89,2.89 0,0 0,21.15 2.86ZM20,5.2 L15.22,19.38a0.88,0.88 0,0 1,-0.84 0.62,0.92 0.92,0 0,1 -0.87,-0.58l-2,-5.25a2.91,2.91 0,0 0,-1.67 -1.68l-5.25,-2A0.9,0.9 0,0 1,4 9.62a0.88,0.88 0,0 1,0.62 -0.84L18.8,4.05A0.91,0.91 0,0 1,20 5.2Z"
-      android:fillColor="#000000"/>
+      android:pathData="M17.114,7.518C17.245,7.127 16.873,6.755 16.482,6.886L7.2,9.98C6.757,10.127 6.741,10.748 7.175,10.919L10.805,12.35C11.191,12.503 11.497,12.809 11.65,13.196L13.081,16.825C13.252,17.26 13.873,17.243 14.021,16.8L17.114,7.518ZM16.166,5.937C17.338,5.546 18.454,6.662 18.063,7.834L14.969,17.116C14.526,18.445 12.665,18.495 12.151,17.192L10.719,13.562C10.669,13.433 10.567,13.331 10.438,13.281L6.808,11.849C5.505,11.335 5.555,9.474 6.884,9.031L16.166,5.937Z"
+      android:fillColor="#000000"
+      android:fillType="evenOdd"/>
 </vector>
