--- a/app/src/main/res/drawable/location_arrow.xml
+++ b/app/src/main/res/drawable/location_arrow.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="30dp"
-    android:viewportWidth="24"
-    android:viewportHeight="30">
+    android:width="110dp"
+    android:height="135dp"
+    android:viewportWidth="110"
+    android:viewportHeight="135">
   <path
-      android:pathData="M17.114,7.518C17.245,7.127 16.873,6.755 16.482,6.886L7.2,9.98C6.757,10.127 6.741,10.748 7.175,10.919L10.805,12.35C11.191,12.503 11.497,12.809 11.65,13.196L13.081,16.825C13.252,17.26 13.873,17.243 14.021,16.8L17.114,7.518ZM16.166,5.937C17.338,5.546 18.454,6.662 18.063,7.834L14.969,17.116C14.526,18.445 12.665,18.495 12.151,17.192L10.719,13.562C10.669,13.433 10.567,13.331 10.438,13.281L6.808,11.849C5.505,11.335 5.555,9.474 6.884,9.031L16.166,5.937Z"
-      android:fillColor="#000000"
-      android:fillType="evenOdd"/>
+      android:fillColor="#FF000000"
+      android:pathData="m66.71,98.25h-0.13c-1.39,-0.05 -2.57,-1.02 -2.91,-2.36l-8.92,-35.68 -35.63,-8.88c-1.35,-0.34 -2.32,-1.52 -2.37,-2.91 -0.05,-1.39 0.81,-2.64 2.13,-3.09l70.24,-23.41c1.12,-0.38 2.36,-0.09 3.2,0.75 0.84,0.84 1.13,2.08 0.75,3.2l-23.4,70.24c-0.43,1.28 -1.63,2.14 -2.98,2.14zM31.07,47.86 L58.09,54.59h-0c1.12,0.28 2,1.15 2.28,2.27l6.77,27.09 18.04,-54.13z"/>
 </vector>
